added controller tests